[gd_scene load_steps=7 format=3 uid="uid://b4n548wgxyqx4"]

[ext_resource type="Script" path="res://attacks/slash_attack.gd" id="1_hgx8g"]
[ext_resource type="Texture2D" uid="uid://737yqqxqj16u" path="res://assets/attacks/claw_attack.png" id="1_pnnb2"]

[sub_resource type="Animation" id="Animation_r2ak6"]
length = 0.001

[sub_resource type="Animation" id="Animation_h5rxw"]
resource_name = "attack_1"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.05, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.05, 0.15, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.15),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"deal_damage"
}]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Timer")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [-1],
"method": &"start"
}]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:can_flip")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mk1lh"]
_data = {
"RESET": SubResource("Animation_r2ak6"),
"attack_1": SubResource("Animation_h5rxw")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f0vo8"]
size = Vector2(43, 83)

[node name="SlashAttack" type="Node2D"]
z_index = 5
script = ExtResource("1_hgx8g")
can_flip = false

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -27)
texture = ExtResource("1_pnnb2")
hframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_mk1lh")
}

[node name="HitBox" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(25, -21)
shape = SubResource("RectangleShape2D_f0vo8")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
